--- a/style/lpStore.css
+++ b/style/lpStore.css
@@ -12,9 +12,13 @@ a:hover {
 	text-decoration: none;
 }
 
-h1, h2, h3, h4 , h5, h6 {
+h1, h2, h3, h4 , h5, h6, legend {
     font-family: "open sans condensed";
 }
+
+legend {
+        font-weight: bold;}
+
 
 form {
     margin-bottom: -10;
@@ -45,6 +49,13 @@ form {
 #header h1 a {
     display: block;
     color: white;
+}
+
+#header  small {
+	position: relative;
+	top: -15;
+	left: 0;
+	font-size: 12px;
 }
 
 /* Sidebar */
@@ -108,7 +119,7 @@ form {
     border: 0 none;
     border-radius: 0;
     box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.7) inset, 0 1px 0 rgba(255, 255, 255, 0.2);
-    padding: 5px 10px;
+    padding: 5px 0px 5px 10px;
     width: 156px;
 }
 
