--- a/style/lpStore.css
+++ b/style/lpStore.css
@@ -72,7 +72,7 @@ form {
 	font-size: 12px;
 }
 
-h1 small, h2 small, h3 small, h4 small, h5 small, h6 small {
+h2 small, h3 small, h4 small, h5 small, h6 small {
     margin-left: 1.5em;
 }
 
@@ -331,7 +331,7 @@ ul.legend {
     margin-right: 1.5em;
 }
 
- .legend li span{
+.legend li span{
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
     display: inline-block;
     font-weight: normal;
